<resources>
    <string name="app_name">SoccerClub</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="dark_mode">Dark Mode\t\t\t</string>
    <string name="back_button">Back Button</string>
    <string name="soccer_club_image">Soccer Club\'s Image</string>
    <string name="error_message">Oops.. Data not Found!!</string>
</resources>